--- a/RandomUser/RandomUser/Base.lproj/Main.storyboard
+++ b/RandomUser/RandomUser/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lAq-T0-dyk">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lAq-T0-dyk">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,12 +21,11 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vJX-IB-ogk" userLabel="Up View">
                                 <rect key="frame" x="0.0" y="88" width="414" height="387"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UserImageSample" translatesAutoresizingMaskIntoConstraints="NO" id="L2Y-Ib-CEh">
-                                        <rect key="frame" x="157" y="143.5" width="100" height="100"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L2Y-Ib-CEh">
+                                        <rect key="frame" x="157" y="120" width="100" height="100"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PZf-Mp-pHB">
-                                        <rect key="frame" x="177" y="267" width="60" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PZf-Mp-pHB">
+                                        <rect key="frame" x="8" y="267" width="398" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -34,8 +33,11 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.64856415987014771" green="0.26386022567749023" blue="0.20388999581336975" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
+                                    <constraint firstItem="L2Y-Ib-CEh" firstAttribute="top" secondItem="vJX-IB-ogk" secondAttribute="top" constant="120" id="Chd-9E-qQp"/>
+                                    <constraint firstItem="PZf-Mp-pHB" firstAttribute="centerX" secondItem="L2Y-Ib-CEh" secondAttribute="centerX" id="IBu-3f-eDw"/>
+                                    <constraint firstItem="PZf-Mp-pHB" firstAttribute="leading" secondItem="vJX-IB-ogk" secondAttribute="leadingMargin" id="Omz-Z0-Qko"/>
+                                    <constraint firstItem="PZf-Mp-pHB" firstAttribute="top" secondItem="L2Y-Ib-CEh" secondAttribute="bottom" constant="47" id="Uf5-oC-pMI"/>
                                     <constraint firstItem="L2Y-Ib-CEh" firstAttribute="centerX" secondItem="vJX-IB-ogk" secondAttribute="centerX" id="g31-6n-Ow8"/>
-                                    <constraint firstItem="L2Y-Ib-CEh" firstAttribute="centerY" secondItem="vJX-IB-ogk" secondAttribute="centerY" id="l6A-eW-56U"/>
                                 </constraints>
                             </view>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LlH-Jr-noM">
@@ -61,6 +63,9 @@
                     <navigationItem key="navigationItem" title="Random User" id="kZU-iE-zLj">
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="zhD-hc-odW">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="refresh:" destination="BYZ-38-t0r" id="BFB-zU-seG"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -70,7 +75,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="817" y="127"/>
+            <point key="canvasLocation" x="815.94202898550736" y="126.5625"/>
         </scene>
         <!--Info Table View Controller-->
         <scene sceneID="Vha-gL-xra">
@@ -90,25 +95,28 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8v6-Nb-Vte">
-                                                    <rect key="frame" x="35" y="11.5" width="53.5" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8v6-Nb-Vte">
+                                                    <rect key="frame" x="15" y="11.5" width="60" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="60" id="f81-Gr-aLT"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123456789" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VIC-sJ-Sjj">
-                                                    <rect key="frame" x="103.5" y="11.5" width="89" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123456789" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VIC-sJ-Sjj">
+                                                    <rect key="frame" x="85" y="11.5" width="329" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="VIC-sJ-Sjj" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8v6-Nb-Vte" secondAttribute="trailing" constant="8" symbolic="YES" id="XF8-gs-4Qy"/>
-                                                <constraint firstItem="8v6-Nb-Vte" firstAttribute="centerY" secondItem="PhJ-kR-yo1" secondAttribute="centerY" id="fWN-ez-KUB"/>
-                                                <constraint firstAttribute="trailing" secondItem="VIC-sJ-Sjj" secondAttribute="trailing" constant="221.5" id="gDk-bv-niK"/>
-                                                <constraint firstItem="8v6-Nb-Vte" firstAttribute="leading" secondItem="PhJ-kR-yo1" secondAttribute="leadingMargin" constant="15" id="poA-0Z-kYi"/>
-                                                <constraint firstItem="VIC-sJ-Sjj" firstAttribute="centerY" secondItem="PhJ-kR-yo1" secondAttribute="centerY" id="vJ1-lV-n0w"/>
+                                                <constraint firstItem="8v6-Nb-Vte" firstAttribute="centerY" secondItem="PhJ-kR-yo1" secondAttribute="centerY" id="4T2-AU-6Ra"/>
+                                                <constraint firstAttribute="trailing" secondItem="VIC-sJ-Sjj" secondAttribute="trailing" id="B6f-hF-YcW"/>
+                                                <constraint firstItem="8v6-Nb-Vte" firstAttribute="leading" secondItem="PhJ-kR-yo1" secondAttribute="leading" constant="15" id="K8j-CC-EEz"/>
+                                                <constraint firstItem="VIC-sJ-Sjj" firstAttribute="leading" secondItem="8v6-Nb-Vte" secondAttribute="trailing" constant="10" id="jm1-Ok-rNw"/>
+                                                <constraint firstItem="VIC-sJ-Sjj" firstAttribute="centerY" secondItem="PhJ-kR-yo1" secondAttribute="centerY" id="tXS-Ps-P8p"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -119,25 +127,28 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X6j-ay-ctd">
-                                                    <rect key="frame" x="35" y="11.5" width="45.5" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X6j-ay-ctd">
+                                                    <rect key="frame" x="15" y="11.5" width="60" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="60" id="BzS-ec-qep"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="abc@dao.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a3W-iL-EqA">
-                                                    <rect key="frame" x="95.5" y="11.5" width="109.5" height="21"/>
+                                                    <rect key="frame" x="85" y="11.5" width="329" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="a3W-iL-EqA" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="X6j-ay-ctd" secondAttribute="trailing" constant="8" symbolic="YES" id="2zK-aw-adU"/>
-                                                <constraint firstItem="X6j-ay-ctd" firstAttribute="centerY" secondItem="awX-0g-dFo" secondAttribute="centerY" id="PhO-FZ-98f"/>
-                                                <constraint firstItem="X6j-ay-ctd" firstAttribute="leading" secondItem="awX-0g-dFo" secondAttribute="leadingMargin" constant="15" id="STi-mz-pwh"/>
-                                                <constraint firstAttribute="trailing" secondItem="a3W-iL-EqA" secondAttribute="trailing" constant="209" id="fXH-n2-B1o"/>
-                                                <constraint firstItem="a3W-iL-EqA" firstAttribute="centerY" secondItem="awX-0g-dFo" secondAttribute="centerY" id="neJ-DO-2on"/>
+                                                <constraint firstItem="a3W-iL-EqA" firstAttribute="leading" secondItem="X6j-ay-ctd" secondAttribute="trailing" constant="10" id="BNf-Em-TFL"/>
+                                                <constraint firstItem="X6j-ay-ctd" firstAttribute="leading" secondItem="awX-0g-dFo" secondAttribute="leading" constant="15" id="HUF-0t-JgA"/>
+                                                <constraint firstAttribute="trailing" secondItem="a3W-iL-EqA" secondAttribute="trailing" id="gtD-R3-wEl"/>
+                                                <constraint firstItem="a3W-iL-EqA" firstAttribute="centerY" secondItem="awX-0g-dFo" secondAttribute="centerY" id="hil-FJ-3MW"/>
+                                                <constraint firstItem="X6j-ay-ctd" firstAttribute="centerY" secondItem="awX-0g-dFo" secondAttribute="centerY" id="uqh-3d-jY3"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -177,7 +188,4 @@
             <point key="canvasLocation" x="-170" y="127"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="UserImageSample" width="100" height="100"/>
-    </resources>
 </document>
